--- a/learn2swim/style.css
+++ b/learn2swim/style.css
@@ -7,7 +7,7 @@
 }
 
 /* CSS */
-.button-30 {
+button {
   align-items: center;
   appearance: none;
   background-color: #FCFCFD;
@@ -38,16 +38,16 @@
   font-size: 18px;
 }
 
-.button-30:focus {
+button:focus {
   box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 }
 
-.button-30:hover {
+button:hover {
   box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
   transform: translateY(-2px);
 }
 
-.button-30:active {
+button:active {
   box-shadow: #D6D6E7 0 3px 7px inset;
   transform: translateY(2px);
 }
@@ -55,6 +55,7 @@
 body {
     background: #f9f8fd;
 }
+/*
 nav {
 
     display: inline-block;
@@ -124,6 +125,7 @@ ul li:hover ul {
 ul li:hover ul li a {
     color: #f9f8fd;
 }
+*/
 @keyframes slide-in {
     0% {
         top: -50px;
@@ -140,7 +142,7 @@ ul li:hover ul li a {
 }
 
 h1 {
-    font-family: "Mouse Memoirs", sans-serif;
+
     font-size: 60px;
     margin-top: 2%;
 }
